--- a/FoodWebsCheck_SK.Rmd
+++ b/FoodWebsCheck_SK.Rmd
@@ -64,23 +64,41 @@ class <- class%>% mutate(genera= stringr::word(query)) %>% rename( species = que
 
 unique(class$genera)
 
-# write_tsv(class,"Data/WeddellSea_basal.dat")
+write_tsv(class,"Data/WeddellSea_basal.dat")
+class<-read_tsv("Data/WeddellSea_basal.dat")
 
 # Genera tabla genero clase para reemplazar el nombre de la especie por la clase solo en el caso de Bacillariophyceae
+
+#remove "Phytodetritus" and "Sediment"
+row_names_to_remove<-c("Phytodetritus","Sediment")
+class<-class[!(class$genera %in% row_names_to_remove),]
+
+class  <- class %>% 
+mutate(class = case_when(class %in% c("Prymnesiophyceae", "Chrysophyceae") ~ "Phytoplankton_other",TRUE ~ class))
+
+class  <- class %>% 
+mutate(class = case_when(species %in% c("Silicioflagellata") ~ "Phytoplankton_other",TRUE ~ class))
+
+#add a resource link to Alcyonium antarcticum
+dtot<-rbind(dtot, c("Phytodetritus", "Alcyonium antarcticum"))
+
 #
 gencla <- class %>% filter(!is.na(class)) %>%  distinct(genera,class) %>%  filter(class=="Bacillariophyceae")
 #
 gencla <- add_case(gencla, genera="Nitzschia", class="Bacillariophyceae" )
 dim(gencla)
 
-class2  <- class2 %>% 
-mutate(class = case_when(class %in% c("Prymnesiophyceae",NA) ~ "Phytoplankton_other",TRUE ~ class))
+gencla_other <- class %>% filter(!is.na(class)) %>%  distinct(genera,class) %>%  filter(class=="Phytoplankton_other")
 
 sapply( 1:nrow(dtot), function(i) {
   res_gen <- stringr::word(dtot$resource[i]) 
   rep_cla <- gencla %>% filter(genera == res_gen) 
   if(nrow(rep_cla)==1)
     dtot$resource[i] <<- rep_cla$class
+  
+  rep_cla_other <- gencla_other %>% filter(genera == res_gen) 
+  if(nrow(rep_cla_other)==1)
+    dtot$resource[i] <<- rep_cla_other$class
 })
 
 #
@@ -91,7 +109,9 @@ gM <- graph_from_edgelist(as.matrix(collapsed_w), directed  = T)
 #
 new_basal_sp <- (V(gM)[ (degree(gM,mode="in")==0) ])$name
 new_basal_sp
-#
+
+#I FIXED THESE ISSUES!!! (Susanne)
+
 #        Dictyocha     Chrysophyceae --> phytoplankton == silicioflagellata 
 #      Phaeocystis  Prymnesiophyceae --> phytoplankton
 #      
@@ -99,8 +119,6 @@ new_basal_sp
 #   Silicioflagellata     --> ??? Chrysophyceae? 
 # 
 
-
-
 calc_topological_indices(gM)
-write_csv(collapsed_w,"Data/Weddell_collapsed_links.csv")
+write_csv(collapsed_w,"Data/Weddell_collapsed_links_2.csv")
 ```
