--- a/JAE_Review.bib
+++ b/JAE_Review.bib
@@ -309,6 +309,24 @@
   file = {/Users/tomasmarina/Zotero/storage/MPK6BL5J/Belleggia et al. - 2017 - Adaptation of diet in a changed environment Incre.pdf;/Users/tomasmarina/Zotero/storage/RYRLFB8M/maec.html}
 }
 
+@article{Bester2021,
+  title = {Status of Pinnipeds on Mid-{{Atlantic}} Ridge Islands, {{South Atlantic Ocean}}},
+  author = {Bester, M. N.},
+  year = {2021},
+  month = apr,
+  journal = {Polar Biology},
+  volume = {44},
+  number = {4},
+  pages = {865--871},
+  issn = {1432-2056},
+  doi = {10.1007/s00300-021-02838-z},
+  urldate = {2023-09-16},
+  abstract = {The status of pinnipeds on mid-Atlantic ridge islands is reviewed to detect trends that may relate to climate change. Small numbers of southern elephant seals Mirounga leonina breed on Gough Island (40\textdegree S, 10\textdegree W) and at Bouvet\o ya (54\textdegree 24{${'}$}S, 03\textdegree 21{${'}$}E) where numbers remained small over\,\textasciitilde\,68~years. Vagrant southern elephant seals wandered farther north to tropical Saint Helena Island (15\textdegree 57{${'}$}S, 5\textdegree 41{${'}$}W) in historical times but have not been recorded there more recently. This suggests a contraction of their distributional range, as manifested in the decline in numbers to imminent extinction at Gough Island. At Gough Island and at Tristan da Cunha (37\textdegree 05{${'}$}S, 12\textdegree 17{${'}$}W), leopard seals Hydrurga leptonyx and Antarctic fur seals Arctocephalus gazella are occasional seasonal transients from Antarctic and sub-Antarctic islands and the circumpolar sea ice farther to the south. Large populations of Antarctic fur seals A. gazella and sub-Antarctic fur seals A. tropicalis breed at Bouvet\o ya and Gough Island, respectively. The current state of both populations is uncertain as other populations of conspecifics in the South Atlantic and South Indian oceans are in decline ostensibly contingent upon reduced food availability, likely precipitated by climate change.},
+  langid = {english},
+  keywords = {Bouvet\o ya,Fur seals,Leopard seal,Saint Helena and Ascension islands,Southern elephant seal,Tristan da Cunha Islands},
+  file = {/Users/tomasmarina/Zotero/storage/HDBXWB3G/Bester - 2021 - Status of pinnipeds on mid-Atlantic ridge islands,.pdf}
+}
+
 @article{Bogazzi2005,
   title = {Spatial Correspondence between Areas of Concentration of {{Patagonian}} Scallop ({{Zygochlamys}} Patagonica) and Frontal Systems in the Southwestern {{Atlantic}}},
   author = {Bogazzi, Eugenia and Baldoni, Ana and Rivas, Andr{\'e}s and Martos, Patricia and Reta, Ra{\'u}l and Orensanz, J. M. (lobo) and Lasta, Mario and Dell'arciprete, Patricia and Werner, Francisco},
@@ -406,6 +424,23 @@
   urldate = {2023-08-29},
   abstract = {Multiple stressors are increasingly affecting organisms and communities, thereby modifying ecosystems' state and functioning. Raising awareness about the threat from multiple stressors has increased the number of experimental and observational studies specifically addressing consequences of stressor interactions on biota. Most studies measure the direct effects of multiple stressors and their interactions on biological endpoints such as abundance, biomass, or diversity of target organisms. This yields invaluable information for the management and restoration of stressed ecosystems. However, as we argue in our perspective paper, this common approach ignores a fundamental characteristic of communities and ecosystems, i.e., that organisms in ecosystems are interlinked by biotic interactions in ecological networks. Examples from the literature show that biotic interactions can modify stressor effects, transfer stressor effects to distant groups of organisms, and create new stressor interactions. These examples also suggest that changes in biotic interactions can have effects of similar or greater magnitude than direct stressor effects. We provide a perspective on how to include network characteristics and biotic interactions into analyses of multiple-stressor effects on ecosystems. Our approach can also make use of biomonitoring data produced with established and intercalibrated methods, and can combine it with novel metrics used to describe the functioning of ecosystems, such as trait information or stable-isotope measurements. The insights on network-mediated effects gained via the approach we propose can substantially increase mechanistic understanding of multiple-stressor effects, and in turn, the efficiency of ecosystem management and restoration.},
   file = {/Users/tomasmarina/Zotero/storage/L63JKVEL/Bruder et al. - 2019 - The Importance of Ecological Networks in Multiple-.pdf}
+}
+
+@article{Buskey2016,
+  title = {Impact of {{Oil Spills}} on {{Marine Life}} in the {{Gulf}} of {{Mexico}}: {{EFFECTS ON PLANKTON}}, {{NEKTON}}, {{AND DEEP-SEA BENTHOS}}},
+  shorttitle = {Impact of {{Oil Spills}} on {{Marine Life}} in the {{Gulf}} of {{Mexico}}},
+  author = {Buskey, Edward J. and White, Helen K. and Esbaugh, Andrew J.},
+  year = {2016},
+  journal = {Oceanography},
+  volume = {29},
+  number = {3},
+  eprint = {24862719},
+  eprinttype = {jstor},
+  pages = {174--181},
+  publisher = {{Oceanography Society}},
+  issn = {1042-8275},
+  urldate = {2023-09-15},
+  abstract = {ABSTRACTThe Deepwater Horizon (DWH) oil spill was the largest accidental release of crude oil into the sea in history, and represents the most extensive use of chemical dispersants to treat an oil spill. Following the spill, extensive studies were conducted to determine the potential acute and sublethal toxic effects of crude oil and dispersants on a range of planktonic, nektonic, and benthic marine organisms. Organisms such as phytoplankton, zooplankton, and fish were examined via controlled laboratory studies, while others, such as deep-sea benthic invertebrates, which are difficult to sample, maintain, and study in the laboratory, were assessed through field studies. Laboratory studies with marine fishes focused on the sublethal effects of oil and dispersants, and early life history stages were generally found to be more sensitive to these toxins than adults. Field studies in the vicinity of the DWH spill indicate a significant reduction in abundance and diversity of benthic meiofauna and macrofauna as well as visual damage to deep-sea corals. Overall, studies indicate that while the responses of various marine species to oil and dispersants are quite variable, a general picture is emerging that chemical dispersants may be more toxic to some marine organisms than previously thought, and that small oil droplets created by dispersant use and directly consumed by marine organisms are often more toxic than crude oil alone.}
 }
 
 @article{Carbajal2018,
@@ -1217,6 +1252,24 @@
   file = {/Users/tomasmarina/Zotero/storage/EX6HAVEQ/González-Zevallos y Yorio - 2006 - Seabird use of discards and incidental captures at.pdf}
 }
 
+@article{Gonzalez-Zevallos2011,
+  title = {Consumption of Discards and Interactions between {{Black-browed Albatrosses}} ({{Thalassarche}} Melanophrys) and {{Kelp Gulls}} ({{Larus}} Dominicanus) at Trawl Fisheries in {{Golfo San Jorge}}, {{Argentina}}},
+  author = {{Gonz{\'a}lez-Zevallos}, Diego and Yorio, Pablo},
+  year = {2011},
+  month = oct,
+  journal = {Journal of Ornithology},
+  volume = {152},
+  number = {4},
+  pages = {827--838},
+  issn = {2193-7206},
+  doi = {10.1007/s10336-011-0657-6},
+  urldate = {2023-09-15},
+  abstract = {We evaluated discard consumption by Kelp Gulls (Larus dominicanus) and Black-browed Albatrosses (Thalassarche melanophrys) associated with trawlers operating at Golfo San Jorge, Argentina, and assessed differences in their feeding behaviour, prey size preferences and foraging efficiency. Observations were made onboard hake (January 2007) and shrimp vessels (November 2008). The Kelp Gull and Black-browed Albatross were the most frequent and abundant seabirds at both fisheries, while Argentine Hake (Merluccius hubbsi) dominated the composition of discards. Kelp Gulls and Black-browed Albatrosses consumed 91\% of experimentally discarded hake (n~=~1236). Mean sizes of prey consumed by gulls were 22.4 and 23.7~cm in the hake and shrimp fisheries, respectively, while those of prey consumed by albatrosses were 28.5 and 31.3~cm, respectively. In both fisheries, gulls selected the smaller prey available ({$<$}25 and {$<~$}30~cm in hake and shrimp fisheries, respectively) while Black-browed Albatrosses selected the larger prey available ({$>$}25 and {$>$}30~cm in hake and shrimp fisheries, respectively). Intraspecific and interspecific kleptoparasitism were significantly more frequent than expected in Kelp Gulls and Black-browed Albatrosses, respectively. Robbing efficiency was clearly higher in albatrosses than gulls. In both species, sizes of prey consumed by direct capture were significantly smaller than those stolen, and the rate of kleptoparasitism increased with prey size. Gulls stole significantly smaller prey than albatrosses. Prey selection by Kelp Gulls is affected by the interaction with Black-browed Albatrosses, and the degree at which discards are used by both species appears to depend on the fishery considered, the food on offer and the selection of prey sizes according to seabird species-specific preferences.},
+  langid = {english},
+  keywords = {Black-browed Albatrosses,Discard consumption,Kelp Gull,Seabirds,Species interactions,Trawlers},
+  file = {/Users/tomasmarina/Zotero/storage/EWEK65EE/González-Zevallos and Yorio - 2011 - Consumption of discards and interactions between B.pdf}
+}
+
 @techreport{Gorini2021,
   type = {{Informe T\'ecnico Oficial}},
   title = {{Actualizaci\'on de la estad\'istica pesquera de peces demersales australes en el Atl\'antico Sudoccidental (per\'iodo 2008-2020)}},
@@ -1437,6 +1490,26 @@
   langid = {english},
   keywords = {Antarctic Ocean,Antarctica,Climate change,Climate modeling,Foraging,Marine fish,South Georgia,Summer},
   file = {/Users/tomasmarina/Zotero/storage/CT6YD3Y8/Hill et al. - 2013 - Potential Climate Change Effects on the Habitat of.pdf}
+}
+
+@article{Hindell2020,
+  title = {Tracking of Marine Predators to Protect {{Southern Ocean}} Ecosystems},
+  author = {Hindell, Mark A. and Reisinger, Ryan R. and {Ropert-Coudert}, Yan and H{\"u}ckst{\"a}dt, Luis A. and Trathan, Philip N. and Bornemann, Horst and Charrassin, Jean-Beno{\^i}t and Chown, Steven L. and Costa, Daniel P. and Danis, Bruno and Lea, Mary-Anne and Thompson, David and Torres, Leigh G. and {Van de Putte}, Anton P. and Alderman, Rachael and {Andrews-Goff}, Virginia and Arthur, Ben and Ballard, Grant and Bengtson, John and Bester, Marth{\'a}n N. and Blix, Arnoldus Schytte and Boehme, Lars and Bost, Charles-Andr{\'e} and Boveng, Peter and Cleeland, Jaimie and Constantine, Rochelle and Corney, Stuart and Crawford, Robert J. M. and Dalla Rosa, Luciano and {de Bruyn}, P. J. Nico and Delord, Karine and Descamps, S{\'e}bastien and Double, Mike and Emmerson, Louise and Fedak, Mike and Friedlaender, Ari and Gales, Nick and Goebel, Michael E. and Goetz, Kimberly T. and Guinet, Christophe and Goldsworthy, Simon D. and Harcourt, Rob and Hinke, Jefferson T. and Jerosch, Kerstin and Kato, Akiko and Kerry, Knowles R. and Kirkwood, Roger and Kooyman, Gerald L. and Kovacs, Kit M. and Lawton, Kieran and Lowther, Andrew D. and Lydersen, Christian and Lyver, Phil O'B and Makhado, Azwianewi B. and M{\'a}rquez, Maria E. I. and McDonald, Birgitte I. and McMahon, Clive R. and Muelbert, Monica and Nachtsheim, Dominik and Nicholls, Keith W. and Nord{\o}y, Erling S. and Olmastroni, Silvia and Phillips, Richard A. and Pistorius, Pierre and Pl{\"o}tz, Joachim and P{\"u}tz, Klemens and Ratcliffe, Norman and Ryan, Peter G. and Santos, Mercedes and Southwell, Colin and Staniland, Iain and Takahashi, Akinori and Tarroux, Arnaud and Trivelpiece, Wayne and Wakefield, Ewan and Weimerskirch, Henri and Wienecke, Barbara and Xavier, Jos{\'e} C. and Wotherspoon, Simon and Jonsen, Ian D. and Raymond, Ben},
+  year = {2020},
+  month = apr,
+  journal = {Nature},
+  volume = {580},
+  number = {7801},
+  pages = {87--92},
+  publisher = {{Nature Publishing Group}},
+  issn = {1476-4687},
+  doi = {10.1038/s41586-020-2126-y},
+  urldate = {2023-09-16},
+  abstract = {Southern Ocean ecosystems are under pressure from resource exploitation and climate change1,2. Mitigation requires the identification and protection of Areas of Ecological Significance (AESs), which have so far not been determined at the ocean-basin scale. Here, using assemblage-level tracking of marine predators, we identify AESs for this globally important region and assess current threats and protection levels. Integration of more than 4,000 tracks from 17 bird and mammal species reveals AESs around sub-Antarctic islands in the Atlantic and Indian Oceans and over the Antarctic continental shelf. Fishing pressure is disproportionately concentrated inside AESs, and climate change over the next century is predicted to impose pressure on these areas, particularly around the Antarctic continent. At present, 7.1\% of the ocean south of 40\textdegree S is under formal protection, including 29\% of the total AESs. The establishment and regular revision of networks of protection that encompass AESs are needed to provide long-term mitigation of growing pressures on Southern Ocean ecosystems.},
+  copyright = {2020 The Author(s), under exclusive licence to Springer Nature Limited},
+  langid = {english},
+  keywords = {Conservation biology,Ecological modelling},
+  file = {/Users/tomasmarina/Zotero/storage/XITDGSIE/Hindell et al. - 2020 - Tracking of marine predators to protect Southern O.pdf}
 }
 
 @article{Hoffmann2019,
@@ -2046,6 +2119,24 @@
   file = {/Users/tomasmarina/Zotero/storage/ZTB7B3BC/Mendes et al. - 2018 - New insights on the dominance of cryptophytes in A.pdf}
 }
 
+@article{Menge1995,
+  title = {Indirect {{Effects}} in {{Marine Rocky Intertidal Interaction Webs}}: {{Patterns}} and {{Importance}}},
+  shorttitle = {Indirect {{Effects}} in {{Marine Rocky Intertidal Interaction Webs}}},
+  author = {Menge, Bruce A.},
+  year = {1995},
+  journal = {Ecological Monographs},
+  volume = {65},
+  number = {1},
+  pages = {21--74},
+  issn = {1557-7015},
+  doi = {10.2307/2937158},
+  urldate = {2023-09-16},
+  abstract = {To determine the patterns of occurrence and importance of indirect effects relative to direct effects in natural communities, I analyzed experimentally based studies from 23 rocky intertidal habitats. The vehicle of analysis was the construction of interaction webs, or the subset of species in food webs involved in strong interactions. The analysis focused on indirect effects involving changes in abundance, or interaction chains, since little information was available on other types of indirect effects (behavioral, chemical response, environmental). As expected, number of direct (= strong) interactions, indirect effects, interaction sequences producing indirect effects, and types of indirect effects (e.g., keystone predation, apparent competition, etc.) all increased with web species richness. Less expected, when these measures were adjusted to a per species basis, positive relationships with species richness were still observed for all measures but the number of types. In other words, with increasing web diversity, each species interacted strongly with more species, was involved in more indirect effects, and was part of more interaction pathways. The analysis identified 83 subtypes of indirect effect, including the seven previously identified types. Many of the 76 additional types could be reclassified into the seven types if the original definitions of these 'classic' types were expanded to include interactions having similar effects but differing in the specific mechanism (e.g., both interference competition and inhibition of recruitment [preemption] have negative effects involving a spatial resource). Two new types of indirect effect, termed 'apparent predation' and 'indirect defense' were also identified, producing a total of 9 general types of indirect effect divided among 565 specific indirect effects. Of these, keystone predation (35\%) and apparent competition (25\%) were most common and exploitation competition (2.8\%) was least common in these webs. Two methods of analysis suggested that indirect effects accounted for \textdegree 40\% of the change in community structure resulting from manipulations, with a range of 24\textemdash 61\%. The proportion of change due to indirect effects was constant with web species richness, indicating that strong direct interactions and indirect effects produce roughly the same level of alteration of community structure regardless of the level of web complexity. Several potential artifacts and biases were evaluated. Most importantly, neither variation in level of taxonomic resolution nor intensity of experimentation varied significantly with web size (species richness). Despite a bias toward manipulation of consumers over manipulation of basal species, some predator\textemdash initiated indirect effect types were scarce while some basal species\textemdash initiated types were common. While the frequency of exploitation competition may have been underestimated, it is unlikely that the frequency of this indirect effect would change dramatically: changes due to this effect should have been detected in many of the studies and reported; and the most intensively studied individual webs did not report frequencies differing much from the average. This analysis suggests investigators effectively identified and first manipulated those species responsible for most indirect effects and that more experiments added decreasing numbers of indirect effects. Moreover, the frequencies and importance of indirect effects may be more predictable than expected on the basis of theory.},
+  copyright = {\textcopyright{} 1995 by the Ecological Society of America},
+  langid = {english},
+  file = {/Users/tomasmarina/Zotero/storage/85V9HGXN/Menge - 1995 - Indirect Effects in Marine Rocky Intertidal Intera.pdf;/Users/tomasmarina/Zotero/storage/WBLKNJ2B/2937158.html}
+}
+
 @article{Meredith2018,
   title = {Anatomy of a Glacial Meltwater Discharge Event in an {{Antarctic}} Cove},
   author = {Meredith, Michael P. and Falk, Ulrike and Bers, Anna Valeria and Mackensen, Andreas and Schloss, Irene R. and Ruiz Barlett, Eduardo and Jerosch, Kerstin and Silva Busso, Adri{\'a}n and Abele, Doris},
@@ -2115,6 +2206,23 @@
   langid = {english},
   keywords = {connectance,food webs,indirect effects,inverse Jacobian matrix,linkage density,press perturbation,specialization},
   file = {/Users/tomasmarina/Zotero/storage/K3U2987A/Montoya et al. - 2009 - Press perturbations and indirect effects in real f.pdf}
+}
+
+@article{Moore1974,
+  title = {Effects of Oil on Marine Organisms: {{A}} Critical Assessment of Published Data},
+  shorttitle = {Effects of Oil on Marine Organisms},
+  author = {Moore, S. F and Dwyer, R. L},
+  year = {1974},
+  month = oct,
+  journal = {Water Research},
+  volume = {8},
+  number = {10},
+  pages = {819--827},
+  issn = {0043-1354},
+  doi = {10.1016/0043-1354(74)90028-1},
+  urldate = {2023-09-15},
+  abstract = {Effects of oil on marine organisms are categorized as:(1) direct lethal toxicity; (2) sub-lethal disruption of physiological behavioral activities: (3) effects of direct coating: (4) incorporation of hydrocarbons: and (5) alteration of habitat, especially substrate character. Occurrence of one or more of these effects depends on the composition of oil to which organisms are exposed. Weathering processes significantly alter the composition of spilled oil, resulting in wide variations in biological effects. A set of oil fractions, distinguished by boiling point range and hydrocarbon type, provide a convenient basis for including the important chemical aspects of the impact problem. Adult marine organisms may exhibit lethal toxic effects from exposures to 1\textendash 100 ppm soluble aromatic derivative hydrocarbons (SAD). Sub-lethal effects may be caused by SAD concentrations in the range 10\textendash 100 ppb. Oil exposed to the atmosphere for 1\textendash 2 days loses soluble fractions and non-toxic effects, habitat alteration and coating, become important effects. Effects of several spills are reviewed in light of the above considerations.},
+  file = {/Users/tomasmarina/Zotero/storage/DNCYNNSC/0043135474900281.html}
 }
 
 @article{Moy2009,
@@ -2584,6 +2692,15 @@
   langid = {english},
   keywords = {Environment-benthic relationships,Epifaunal benthos,Infaunal benthos,Mega- and macrofauna,Seabed images,Sediment cores,Southern Ocean,Zoobenthic distribution patterns},
   file = {/Users/tomasmarina/Zotero/storage/ZNDRB8W4/Pineda-Metz et al. - 2019 - Benthic communities of the Filchner Region (Weddel.pdf}
+}
+
+@phdthesis{Pineda-Metz2019a,
+  title = {Benthic Communities of the {{Weddell Sea}}: Past, Present and Future},
+  author = {{Pineda-Metz}, Santiago E. A.},
+  year = {2019},
+  address = {{Germany}},
+  school = {University of Bremen},
+  file = {/Users/tomasmarina/Zotero/storage/38HRKAHJ/SEAPM_Benthic_communities_of_the_Weddell_Sea-past_present_and_future.pdf}
 }
 
 @article{Pineda-Metz2020,
@@ -3569,6 +3686,18 @@
   file = {/Users/tomasmarina/Zotero/storage/FFXLNHG3/Wood et al. - 2015 - Effects of spatial scale of sampling on food web s.pdf;/Users/tomasmarina/Zotero/storage/7EXEDTQ5/ece3.html}
 }
 
+@article{Woods2023,
+  title = {Species Distribution Models Describe Spatial Variability in Mesopelagic Fish Abundance in the {{Southern Ocean}}},
+  author = {Woods, Briannyn L. and {Van de Putte}, Anton P. and Hindell, Mark A. and Raymond, Ben and Saunders, Ryan A. and Walters, Andrea and Trebilco, Rowan},
+  year = {2023},
+  journal = {Frontiers in Marine Science},
+  volume = {9},
+  issn = {2296-7745},
+  urldate = {2023-09-16},
+  abstract = {IntroductionMesopelagic fishes play a central role in the transfer of energy through open-ocean food webs, particularly in the Southern Ocean where they are both important predators of zooplankton and a key prey group for many higher predators. However, they are notoriously difficult to sample, which has limited our understanding of the bio-physical predictors of their abundance and spatiotemporal variability. Species distribution models can be used to help understand species' ecological requirements by relating records of their presence or abundance to environmental data.MethodsHere, we used data from Myctobase \textendash{} a new circumpolar database of mesopelagic fishes \textendash{} to model patterns in abundance of eight key myctophid species (family Myctophidae) and the genus Bathylagus in the Southern Ocean south of 45\textdegree S. We developed species-specific boosted regression tree models to obtain circumpolar predictions of abundance. Average daytime and night-time summer predictions for the period 1997 to 2011 at 0 to 200m depths were generated for each species.ResultsDepth and solar position were important predictors and species were stratified in their depth distribution. For all species, except for G. nicholsi, there was an interaction between depth of capture and solar position, reflecting diel vertical migration. Other important variables included sea surface temperature, dissolved oxygen at 200 m, chlorophyll a, and sea surface height, indicating an association with water mass properties. Circumpolar patterns of abundance varied between species with some displaying affinities for oceanic regions at Antarctic latitudes (e.g., E. antarctica and Bathylagus spp.) or sub-Antarctic latitudes (e.g., K. anderssoni and P. tenisoni); and affinities for shelf regions (e.g., P. boliniand G. nicholsi).DiscussionOur findings suggest that the abundance of mesopelagic fish is influenced by diel vertical migration and meso- and sub-mesoscale oceanographic features, with the Polar Front being a major delimiting feature. Our study showed contrasting patterns in community composition with higher species diversity north of the Polar Front that might be indicative of latitudinal variability in food web structure. Our spatial analysis is an important step toward resolving what determines important habitat for mesopelagic fishes, providing foundational information for understanding shifting food web dynamics into the future.},
+  file = {/Users/tomasmarina/Zotero/storage/DI7GHFP2/Woods et al. - 2023 - Species distribution models describe spatial varia.pdf}
+}
+
 @incollection{Woodward2010,
   title = {Ecological {{Networks}} in a {{Changing Climate}}},
   booktitle = {Advances in {{Ecological Research}}},
@@ -3696,6 +3825,23 @@
   langid = {english},
   keywords = {Breeding seabirds,conservation tools,fisheries,foraging seabirds,governance,marine protected areas,Patagonia,spatial scales},
   file = {/Users/tomasmarina/Zotero/storage/XIBR6PRP/Yorio - 2009 - Marine protected areas, spatial scales, and govern.pdf}
+}
+
+@article{Yorio2017,
+  title = {Relevance of Forage Fish in the Diet of {{Magellanic}} Penguins Breeding in Northern {{Patagonia}}, {{Argentina}}},
+  author = {Yorio, Pablo and {Gonz{\'a}lez-Zevallos}, Diego and Gatto, Alejandro and Biagioni, Oscar and Castillo, Joanna},
+  year = {2017},
+  month = jul,
+  journal = {Marine Biology Research},
+  volume = {13},
+  number = {6},
+  pages = {603--617},
+  publisher = {{Taylor \& Francis}},
+  issn = {1745-1000},
+  doi = {10.1080/17451000.2016.1273529},
+  urldate = {2023-09-15},
+  abstract = {We quantified the trophic niche of Magellanic penguins (Spheniscus magellanicus) breeding and moulting in Golfo San Jorge, Argentina, through conventional stomach content and stable isotope analysis. A total of 112 adults were flushed during the early and late chick stages of 2011 and 2012 at Isla Vernacci Norte, and at least 15 prey taxa were found, including fishes, cephalopods, crustaceans and polychaetes. Overall, Argentine anchovy (Engraulis anchoita) showed the highest contribution in terms of importance by mass (68.1\textendash 85.3\%, depending on chick stage and year), except for the old chick stage in 2011 when the shortfin squid (Illex argentinus) was the main prey consumed (56.0\%). Based on carbon and nitrogen isotopic values from a total of 256 blood samples, corresponding to young and old chicks and to adults of both sexes sampled throughout the incubation, chick and moult stages at the above mentioned colony and years, Bayesian mixing model outputs showed that Argentine anchovy was always the main prey (48\textendash 86\%). Bayesian mixing model outputs obtained from adults of both sexes and their chicks during the late chick stage of 2013 at Isla Vernacci Norte, Isla Tova and Isla Leones also showed that Argentine anchovy was the main prey consumed. This is the first comprehensive assessment of Magellanic penguin diet composition in northern Patagonia, quantifying the relative contribution of prey in the diet of adults and chicks at different stages of the annual cycle and years, and confirms the relevance of a forage fish such as the Argentine anchovy in its trophic ecology.},
+  keywords = {Argentine anchovy,diet composition,Engraulis anchoita,Leandro Bugoni,Spheniscus magellanicus,stable isotopes}
 }
 
 @article{Zhao2016,
